# stac-api-benchmark

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/geojson_files/: step_september152014_70rndsel_igbpcl.geojson
src/stac_api_benchmark/: __init__.py  __main__.py  query.py  random_geojson.py
tests/: __init__.py  test_main.py
