[tool.poetry]
name = "stac-api-benchmark"
version = "0.1.0"
description = "STAC API Benchmark"
authors = ["Phil Varner <pvarner@element84.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/philvarner/stac-api-benchmark"
repository = "https://github.com/philvarner/stac-api-benchmark"
documentation = "https://stac-api-benchmark.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/philvarner/stac-api-benchmark/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.1"
Expression = "^2.0.0"
pystac-client = "^0.3.3"
types-requests = "^2.27.24"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.950"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.0.1"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^4.0.3"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"

[tool.poetry.scripts]
stac-api-benchmark = "stac_api_benchmark.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stac_api_benchmark", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
