[tool.poetry]
name = "stac-api-benchmark"
version = "0.1.0"
description = "STAC API Benchmark"
authors = ["Phil Varner <pvarner@element84.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/philvarner/stac-api-benchmark"
repository = "https://github.com/philvarner/stac-api-benchmark"
documentation = "https://stac-api-benchmark.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/philvarner/stac-api-benchmark/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Expression = "^2.0.0"
pystac-client = "^0.5.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
geojson = "^2.5.0"
faker = "^14.2.0"
click-log = "^0.4.0"
returns = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4"}
safety = "^2.1.1"
mypy = "^0.971"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^5.1.1"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.2"
pre-commit-hooks = "^4.3.0"
sphinx-click = "^4.3.0"
Pygments = "^2.12.0"
pyupgrade = "^2.32.1"
furo = ">=2021.11.12"

[tool.poetry.scripts]
stac-api-benchmark = "stac_api_benchmark.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["stac_api_benchmark", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 0 # todo: more tests

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = "returns.contrib.mypy.returns_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
